<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:cftv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".AppInfoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ar.com.promm.customwidgets.CustomFontTextView
            android:id="@+id/goBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_back_icon"
            android:textSize="30dp"
            android:padding="10dp"
            android:textColor="@color/greenPromm"
            cftv:typeFace="Simple-Line-Icons"
            android:clickable="true"
            android:onClick="goBack"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="99dp"
                android:layout_height="99dp"
                android:src="@drawable/launcher_bisel"
                android:padding="17dp"/>

        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="27dp"
            android:layout_weight="1">

            <ar.com.promm.customwidgets.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/greenPromm"
                android:textSize="26dp"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/app_info_title"/>

            <ar.com.promm.customwidgets.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/greyPromm"
                android:textSize="21dp"
                android:gravity="center"
                android:paddingTop="20dp"
                android:text="@string/app_info_content_1"/>

            <ar.com.promm.customwidgets.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/greyPromm"
                android:textSize="21dp"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/app_info_content_2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    style="@android:style/TextAppearance.WindowTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_store"
                    android:onClick="registerStore" />

                <Button
                    style="@android:style/TextAppearance.WindowTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share_app"
                    android:onClick="shareApp" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</LinearLayout>
