<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:cftv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/intro_background"
    tools:context=".FirstTutorialActivity" >

    <ar.com.promm.customwidgets.CustomFontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smile_icon"
        android:textColor="@color/white"
        android:textSize="45dp"
        android:padding="2dp"
        cftv:typeFace="Simple-Line-Icons"
        android:layout_gravity="center_horizontal" />

    <ar.com.promm.customwidgets.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:text="@string/first_tutorial_intro"
        android:layout_weight="1" />

    <ar.com.promm.customwidgets.CustomFontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="28dp"
        cftv:typeFace="Pacifico"
        android:text="@string/next"
        android:clickable="true"
        android:onClick="toNextActivity"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
