<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:cftv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/intro_background"
    tools:context=".TemporaryLocationActivity" >

    <ar.com.promm.customwidgets.CustomFontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/globe_icon"
        android:textColor="@color/white"
        android:textSize="45dp"
        android:padding="2dp"
        cftv:typeFace="Simple-Line-Icons"
        android:layout_gravity="center_horizontal" />

    <ar.com.promm.customwidgets.CustomFontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:text="@string/temporary_location_title"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_marginTop="15dp">

        <ar.com.promm.customwidgets.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temporary_location_location"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:gravity="left"
            android:layout_weight="2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:src="@drawable/argentina" />
    </LinearLayout>

    <ar.com.promm.customwidgets.CustomFontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="28dp"
        cftv:typeFace="Pacifico"
        android:text="@string/next"
        android:clickable="true"
        android:onClick="toNextActivity"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
